--- a/.env.example
+++ b/.env.example
@@ -3,8 +3,12 @@ MODEL=qwen2.5:3b
 OLLAMA_BASE_URL=http://localhost:11434
 AGENT_MAX_STEPS=8
 TOOL_TIMEOUT_MS=5000
+MODEL_TIMEOUT_MS=20000
+MODEL_MAX_RETRIES=2
 
 # OpenAI fallback profile:
 # MODEL_PROVIDER=openai
 # MODEL=gpt-4.1-mini
 # OPENAI_API_KEY=your_api_key_here
+# MODEL_TIMEOUT_MS=20000
+# MODEL_MAX_RETRIES=2
