--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,4 @@ thiserror = "1"
 tokio = { version = "1", features = ["full"] }
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
+reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
