--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,7 @@ MODEL_PROVIDER=ollama
 MODEL=qwen2.5:3b
 OLLAMA_BASE_URL=http://localhost:11434
 AGENT_MAX_STEPS=8
+AGENT_MAX_TOOL_CALLS=8
 TOOL_TIMEOUT_MS=5000
 MODEL_TIMEOUT_MS=20000
 MODEL_MAX_RETRIES=2
