--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,11 @@ TOOL_TIMEOUT_MS=5000
 MODEL_TIMEOUT_MS=20000
 MODEL_MAX_RETRIES=2
 
+# Optional logging:
+# RUST_LOG=info,mjolne_vibes=debug
+# MJOLNE_FILE_LOG=info,mjolne_vibes=debug
+# MJOLNE_LOG_DIR=logs
+
 # OpenAI fallback profile:
 # MODEL_PROVIDER=openai
 # MODEL=gpt-4.1-mini
