feat: enforce fetch_url domain allowlist guardrail

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,7 @@ OLLAMA_BASE_URL=http://localhost:11434
 AGENT_MAX_STEPS=8
 AGENT_MAX_TOOL_CALLS=8
 TOOL_TIMEOUT_MS=5000
+FETCH_URL_ALLOWED_DOMAINS=example.com
 MODEL_TIMEOUT_MS=20000
 MODEL_MAX_RETRIES=2
 
