--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,8 @@ MODEL=qwen2.5:3b
 OLLAMA_BASE_URL=http://localhost:11434
 AGENT_MAX_STEPS=8
 AGENT_MAX_TOOL_CALLS=8
+AGENT_MAX_INPUT_CHARS=4000
+AGENT_MAX_OUTPUT_CHARS=8000
 TOOL_TIMEOUT_MS=5000
 FETCH_URL_ALLOWED_DOMAINS=example.com
 MODEL_TIMEOUT_MS=20000
@@ -17,5 +19,7 @@ MODEL_MAX_RETRIES=2
 # MODEL_PROVIDER=openai
 # MODEL=gpt-4.1-mini
 # OPENAI_API_KEY=your_api_key_here
+# AGENT_MAX_INPUT_CHARS=4000
+# AGENT_MAX_OUTPUT_CHARS=8000
 # MODEL_TIMEOUT_MS=20000
 # MODEL_MAX_RETRIES=2
