--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,8 @@ AGENT_MAX_INPUT_CHARS=4000
 AGENT_MAX_OUTPUT_CHARS=8000
 TOOL_TIMEOUT_MS=5000
 FETCH_URL_ALLOWED_DOMAINS=example.com
+NOTES_DIR=notes
+SAVE_NOTE_ALLOW_OVERWRITE=false
 MODEL_TIMEOUT_MS=20000
 MODEL_MAX_RETRIES=2
 
@@ -21,5 +23,7 @@ MODEL_MAX_RETRIES=2
 # OPENAI_API_KEY=your_api_key_here
 # AGENT_MAX_INPUT_CHARS=4000
 # AGENT_MAX_OUTPUT_CHARS=8000
+# NOTES_DIR=notes
+# SAVE_NOTE_ALLOW_OVERWRITE=false
 # MODEL_TIMEOUT_MS=20000
 # MODEL_MAX_RETRIES=2
