feat: add consecutive tool-step loop guardrail

--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,7 @@ MODEL=qwen2.5:3b
 OLLAMA_BASE_URL=http://localhost:11434
 AGENT_MAX_STEPS=8
 AGENT_MAX_TOOL_CALLS=8
+AGENT_MAX_CONSECUTIVE_TOOL_STEPS=4
 AGENT_MAX_INPUT_CHARS=4000
 AGENT_MAX_OUTPUT_CHARS=8000
 TOOL_TIMEOUT_MS=5000
@@ -23,6 +24,7 @@ MODEL_MAX_RETRIES=2
 # OPENAI_API_KEY=your_api_key_here
 # AGENT_MAX_INPUT_CHARS=4000
 # AGENT_MAX_OUTPUT_CHARS=8000
+# AGENT_MAX_CONSECUTIVE_TOOL_STEPS=4
 # NOTES_DIR=notes
 # SAVE_NOTE_ALLOW_OVERWRITE=false
 # MODEL_TIMEOUT_MS=20000
