Implement live fetch_url retrieval with safety limits

--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,7 @@ AGENT_MAX_CONSECUTIVE_TOOL_STEPS=4
 AGENT_MAX_INPUT_CHARS=4000
 AGENT_MAX_OUTPUT_CHARS=8000
 TOOL_TIMEOUT_MS=5000
+FETCH_URL_MAX_BYTES=100000
 FETCH_URL_ALLOWED_DOMAINS=example.com
 NOTES_DIR=notes
 SAVE_NOTE_ALLOW_OVERWRITE=false
@@ -27,6 +28,7 @@ MODEL_MAX_RETRIES=2
 # AGENT_MAX_OUTPUT_CHARS=8000
 # AGENT_MAX_TOOL_CALLS_PER_STEP=4
 # AGENT_MAX_CONSECUTIVE_TOOL_STEPS=4
+# FETCH_URL_MAX_BYTES=100000
 # NOTES_DIR=notes
 # SAVE_NOTE_ALLOW_OVERWRITE=false
 # MODEL_TIMEOUT_MS=20000
