feat: add chat --json and optional axum serve mode

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2024"
 
 [dependencies]
 anyhow = "1"
+axum = "0.7"
 clap = { version = "4", features = ["derive"] }
 dotenvy = "0.15"
 serde = { version = "1", features = ["derive"] }
