--- a/.env.example
+++ b/.env.example
@@ -16,6 +16,15 @@ SAVE_NOTE_ALLOW_OVERWRITE=false
 MODEL_TIMEOUT_MS=20000
 MODEL_MAX_RETRIES=2
 
+# Optional web-fetch profile (for larger/redirecting sites):
+# Keep FETCH_URL_ALLOWED_DOMAINS explicitly scoped to trusted hosts.
+# FETCH_URL_ALLOWED_DOMAINS=example.com
+# FETCH_URL_FOLLOW_REDIRECTS=true
+# FETCH_URL_MAX_BYTES=250000
+# AGENT_MAX_OUTPUT_CHARS=150000
+# MODEL_TIMEOUT_MS=120000
+# MODEL_MAX_RETRIES=1
+
 # Optional logging:
 # RUST_LOG=info,mjolne_vibes=debug
 # MJOLNE_FILE_LOG=info,mjolne_vibes=debug
