--- a/compose.yaml
+++ b/compose.yaml
@@ -6,6 +6,13 @@ services:
       OLLAMA_HOST: 0.0.0.0:11434
     ports:
       - "11434:11434"
+    deploy:
+      resources:
+        reservations:
+          devices:
+            - driver: nvidia
+              count: 1
+              capabilities: [gpu]
     volumes:
       - ollama-data:/root/.ollama
     restart: unless-stopped
